--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
     <script src="three.js"></script>
     
     <!-- Game Scripts -->
-    <script src="src/utils.js"></script>
-    <script src="src/physics.js"></script>
-    <script src="src/car.js"></script>
-    <script src="src/track.js"></script>
-    <script src="src/camera.js"></script>
-    <script src="src/game.js"></script>
-    <script src="src/main.js"></script>
+    <script src="utils.js"></script>
+    <script src="physics.js"></script>
+    <script src="car.js"></script>
+    <script src="track.js"></script>
+    <script src="camera.js"></script>
+    <script src="game.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
 
