--- a/ultimate-game.html
+++ b/ultimate-game.html
@@ -676,9 +676,15 @@
         });
         
         // 初期化開始
-        document.addEventListener('DOMContentLoaded', () => {
-            // 少し遅延してから初期化（UIの準備を待つ）
-            setTimeout(initializeGame, 500);
+        window.addEventListener('load', () => {
+            // THREE.jsの読み込み完了を確実にするため遅延
+            setTimeout(() => {
+                if (typeof THREE === 'undefined') {
+                    console.error('THREE.js not loaded');
+                    return;
+                }
+                initializeGame();
+            }, 1000);
         });
         
         // グローバルアクセス用
